--- a/dip-switch.html
+++ b/dip-switch.html
@@ -122,7 +122,7 @@
       <div class="dip-wrap" id="dipWrap" role="group" aria-label="DIP Schalter 1 bis 10"></div>
 
       <p class="muted" style="margin-top:10px">
-        <span class="pill" title="Hinweis">ℹ️ Für Startadresse 512 wird Schalter „512“ eingeschaltet.</span>
+        <span class="pill" title="Hinweis">ℹ️ Für Startadresse 512 wird Schalter „512“ eingeschaltet. Dieser ist bei vielen DMX Geräten nicht vorhanden oder besitzt eine andere Funktion und ist somit mit "FUN" gekennzeichnet.</span>
       </p>
     </section>
 
