--- a/warmwhite.html
+++ b/warmwhite.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>DMX Toolbox – Kelvin zu RGB</title>
+<title>Kelvin to RGB</title>
 <style>
   :root{
     --primary:#00b5bd;
@@ -91,7 +91,7 @@
 <body>
   <header>
     <div class="wrap">
-      <h1>DMX Toolbox</h1>
+      <h1>Kelvin to RGB</h1>
       <div class="cta">
         <a href="index.html" target="_blank" rel="noopener">zurück zur Toolbox</a>
       </div>
@@ -101,7 +101,7 @@
   <main class="grid">
     <!-- Kelvin zu RGB -->
     <section class="card">
-      <h2>Kelvin → LED-Mix (RGB / RGBW / RGBWA+UV / RGBLAC)</h2>
+      <h2>Kelvin CCT(warm white to cold white) with RGB</h2>
       <p class="muted">Ziehe den Regler oder gib einen Kelvin-Wert ein (1.000 K – 12.000 K).</p>
       <div class="row" style="align-items:flex-end">
         <input id="kelvinRange" type="range" min="1000" max="12000" step="50" value="3500" style="flex:1"/>
