--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <span class="info-pill">ℹ️ Check your beam angle</span>
     </div>
     
-    <div class="tile" onclick="window.location='https://thomann-stagetech.github.io/dmx/'">
+    <div class="tile" onclick="window.location='patchplan.html'">
       <i class="fas fa-th-large"></i>
       <h2>Patch Plan</h2>
       <p>Kanalzuordnung verwalten</p>
