Wireless DMX Finder integrated

--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
     <p>Passenden DMX-Controller finden</p>
     <span class="info-pill">ℹ️ Match your controller</span>
   </div>
+<div class="tile" onclick="window.location='funkdmx.html'">
+    <i class="fas fa-wifi"></i>
+    <h2>Funk DMX Finder</h2>
+    <p>Finde drahtlose DMX Geräte</p>
+    <span class="info-pill">ℹ️ Locate wireless DMX</span>
+  </div>
 </div>
   </div>
 </div>
