added stage planner

--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
     <p>Finde drahtlose DMX Geräte</p>
     <span class="info-pill">ℹ️ Locate wireless DMX</span>
   </div>
+
+  <div class="tile" onclick="window.location='stageplanner.html'">
+    <i class="fas fa-cubes"></i>
+    <h2>Stage Planner</h2>
+    <p>Bühnenpodeste planen &amp; konfigurieren</p>
+    <span class="info-pill">ℹ️ Plan stage platforms</span>
+  </div>
 </div>
   </div>
 </div>
