--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
     <p>Bühnenpodeste planen &amp; konfigurieren</p>
     <span class="info-pill">ℹ️ Plan stage platforms</span>
   </div>
+
+  <div class="tile" onclick="window.location='moltoncalculator.html'">
+    <i class="fas fa-life-ring"></i>
+    <h2>Ösen &amp; Spannfix Rechner</h2>
+    <p>Ösenanzahl &amp; benötigte Spannfixe berechnen</p>
+    <span class="info-pill">ℹ️ Plane Gummispanner</span>
+  </div>
 </div>
   </div>
 </div>
